# Helper vars
get_filename_component(CURRENT_DIR ${CMAKE_CURRENT_LIST_DIR} NAME)
set(CARDS_BINARY_DIR ${${CARDS_TARGET_NAME}_BINARY_DIR}/${CURRENT_DIR})
set(CARDS_SOURCE_DIR ${${CARDS_TARGET_NAME}_SOURCE_DIR}/${CURRENT_DIR})

# Target
add_executable(
		cards
		main.cpp
)

set_target_properties(
		${CARDS_TARGET_NAME}
		PROPERTIES
		CXX_STANDARD 20
		CXX_STANDARD_REQUIRED ON
		CXX_EXTENSIONS OFF

		CXX_CPPLINT ""
		CXX_INCLUDE_WHAT_YOU_USE ""
		CXX_CLANG_TIDY ""
		LINK_WHAT_YOU_USE ""
)